--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@lucide/lab": "^0.1.2",
     "@reduxjs/toolkit": "^2.2.6",
     "lucide-react": "^0.428.0",
+    "pizza-party-maker": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2"
