--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.1",
+    "@types/node": "^22.7.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
