--- a/.github/workflows/Playwright test.yml
+++ b/.github/workflows/Playwright test.yml
@@ -14,8 +14,9 @@ jobs:
           node-version: lts/*
       - name: Install dependencies
         run: npm ci
-      - name: Run preview
+      - name: Build project
         run: npm run build
+      - name: Run preview
         run: npm run preview
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
