--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pizza-party-maker": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.1",
