--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@lucide/lab": "^0.1.2",
     "@reduxjs/toolkit": "^2.2.6",
+    "i18next": "^23.16.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "lucide-react": "^0.428.0",
     "pizza-party-maker": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.1",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
