--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-i18next": "^15.1.1",
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
+    "react-router-dom": "^7.5.0",
     "uuid": "^11.0.2"
   },
   "devDependencies": {
